<resources>
    <string name="movies_db_key">MOVIES_DB_KEY</string>
    <string name="app_name">UdacityMoviesApp</string>
    <string name="most_popular">Most popular</string>
    <string name="highest_rated">Highest rated</string>
    <string name="movie_poster">Movie poster</string>
    <string name="title">Title:</string>
    <string name="release_date">Release date:</string>
    <string name="vote_average">Vote average:</string>
    <string name="error_occured">Sorry! an error occurred, please make sure you are connected to the Internet and click refresh</string>
    <string name="refresh">Refresh</string>
    <string name="movie_details">Movie details</string>
    <string name="favorite">Favorite</string>
    <string name="play_movie_trailer">Play movie trailer</string>
    <string name="trailers">Trailers:</string>
    <string name="author">Author:</string>
    <string name="source">Source:</string>
    <string name="reviews">Reviews:</string>
    <string name="favorites">Favorites</string>
    <string name="most_popular_movies">Most popular movies</string>
    <string name="highest_rated_movies">Highest rated movies</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="refresh_list">Refresh</string>
    <string name="back_to_movies_list">Back to movies list</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="share_movie">Share movie</string>
    <string name="share">Share</string>
    <string name="watch_this_movie">Watch this movie</string>
    <string name="failed_to_add_record">Failed to add a record into</string>
    <string name="no_favorite_movies">Sorry! No favorite movies in your list</string>
    <string name="error_fav_movie_not_added">Error! Favorite movie not added</string>
    <string name="error_fav_movie_not_removed">Error! Favorite movie not removed</string>
</resources>
